--- a/ATE_Overleaf_version_to_word.Rmd
+++ b/ATE_Overleaf_version_to_word.Rmd
@@ -120,7 +120,7 @@ Using this approach, Sankararaman et al . 2012. dated the Neandertal-human admix
 
 Using D-statistics [@green_draft_2010] and by directly inferring introgressed segments, it was found that the amount of Neandertal ancestry is 24\% higher in present-day East-Asians compared to Europeans [@meyer_high-coverage_2012;@wall_higher_2013]. A second admixture event private to East-Asians around the same time as the interbreeding event between Neandertals and all non-Africans is suggested to explain the higher amount of ancestry [@kim_selection_2015;@vernot_complex_2015].
 
-Compared to the relatively simple patterns of inference in Neandertal ancestry, Denisovan ancestry in modern humans is more complex. Among present-day populations, Papuans and Melanesians have the highest amount of Denisovan ancestry (6\%), much more than East-Asians (0.2\%) [@reich_genetic_2010,@meyer_high-coverage_2012].
+Compared to the relatively simple patterns of inference in Neandertal ancestry, Denisovan ancestry in modern humans is more complex. Among present-day populations, Papuans and Melanesians have the highest amount of Denisovan ancestry (6\%), much more than East-Asians (0.2\%) [@reich_genetic_2010;@meyer_high-coverage_2012].
 However, the Denisovan ancestry segments in East Asians are made up of two distinct groups, one from a population only distantly related to the sequenced Denisovan genome, and another one that is more closely related [@browning_analysis_2018]. In contrast, Papuans and Melanesians only have segments from the first of this group, despite them having much more overall ancestry.
 One explanation is that there has been a common admixture event into an ancestor of both populations, and a second event that only contributed to East Asians; however the admixture segment lengths of these two sets of populations are not significantly different from each other, suggesting either a lack of power to distinguish the two events by time, or that they occurred roughly at the same time [@browning_analysis_2018].
 
