--- a/Paper/References/MyLibraryATE.bib
+++ b/Paper/References/MyLibraryATE.bib
@@ -1873,3 +1873,10 @@ A human skull from 34,000 years ago found in Mongolia elucidates the genetics of
 	pages = {579--583},
 	file = {Snapshot:/home/leonardo_iasi/Zotero/storage/TJ7359W8/579.html:text/html;Submitted Version:/home/leonardo_iasi/Zotero/storage/HWI3JHC4/Massilani et al. - 2020 - Denisovan ancestry and population history of early.pdf:application/pdf}
 }
+
+@book{yee_vector_2015,
+	title = {Vector {Generalized} {Linear} and {Additive} {Models}. {With} an {Implementation} in {R}.},
+	publisher = {Springer},
+	author = {Yee, Thomas. W},
+	year = {2015}
+}
