--- a/Paper/Supplements.tex
+++ b/Paper/Supplements.tex
@@ -163,6 +163,29 @@ since $\frac{\Gamma(k+1)}{\Gamma(k)} =k$ we can re-write the likelihood to:
 \caption{\label{fig:figS2} Comparison of the standardized difference between true and estimated admixture time for simulations of all combinations of parameters: ascertainment scheme = LES/HES,  $d_{0}$ = 0.02/0.05 cM, demography = simple/complex, recombination = constant/variable and the gene flow model = simple/extended. Simulations under the simple pulse are indicated in purple, extended pulse in turquoise. Each simulation was repeated 100 times. Dotted horizontal line indicates no difference between true and estimated time.}
 \end{figure}
 
+\begin{figure}
+\centering
+\includegraphics{ATE_Revisions_files/figure-latex/figR3_1-1.pdf}
+\caption{\label{fig:figS3} Simple and extended pulse fitted to ALD data for different gene flow durations with mean admixture time at 1500 gnerations ago. A) Mean time estimates. B) Duration estimate.}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics{ATE_Revisions_files/figure-latex/figR3_3-1.pdf}
+\caption{\label{fig:figS4} Log likelihood ratio between the simple and extended pulse fitted to ALD data for different gene flow durations with mean admixture time at 1500 gnerations ago.}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics{ATE_Revisions_files/figure-latex/figR3_4-1.pdf}
+\caption{\label{fig:figS5} Simple and extended pulse fitted to true and inferred segment data for different gene flow durations with mean admixture time at 1500 generations ago. The simulations used either a constant recombination rate or the deCODE map. The genetic distance is assigned using a constant rate, the AAMap or thye deCODE map. A) Mean time estimates. B) Duration estimate.}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics{ATE_Revisions_files/figure-latex/figR3_5-1.pdf}
+\caption{\label{fig:figS6} Log likelihood ratio between the simple and extended pulse fitted to true and inferred segment data for different gene flow durations with mean admixture time at 1500 gnerations ago.}
+\end{figure}
 
 \section{Supplement Tables}
 
