Update on Overleaf.

--- a/Paper/Supplements.tex
+++ b/Paper/Supplements.tex
@@ -153,13 +153,13 @@ since $\frac{\Gamma(k+1)}{\Gamma(k)} =k$ we can re-write the likelihood to:
 
 \begin{figure}
 \centering
-\includegraphics{Admixture_Time_Inference_Paper_Draft_files/figure-latex/figS1-1.pdf}
+\includegraphics{Admixture_Time_Inference_Paper_Draft_files/figure-latex/All_3_demo_models.pdf}
 \caption{\label{fig:figS1} Demographic models of Neandertal introgression into non-Africans used for the simulations. A) Simple demographic model used for ALD simulations with constant population sizes. B) Complex demographic model with substructure in Africa, where after an initial earlier split and isolation the structured population exchange migrants till the final split and additional gene flow between Africans and non-Africans after the Neandertal admixture. The  population sizes after the (final) split are taken from MSMC/PSMC estimates for the respective populations.}
 \end{figure}
 
 \begin{figure}
 \centering
-\includegraphics{Admixture_Time_Inference_Paper_Draft_files/figure-late}
+\includegraphics[width=16cm,height=18cm,keepaspectratio]{Admixture_Time_Inference_Paper_Draft_files/figure-latex/figS2-1.pdf}
 \caption{\label{fig:figS2} Comparison of the standardized difference between true and estimated admixture time for simulations of all combinations of parameters: ascertainment scheme = LES/HES,  $d_{0}$ = 0.02/0.05 cM, demography = simple/complex, recombination = constant/variable and the gene flow model = simple/extended. Simulations under the simple pulse are indicated in purple, extended pulse in turquoise. Each simulation was repeated 100 times. Dotted horizontal line indicates no difference between true and estimated time.}
 \end{figure}
 
